Fixing Mobile Version iPhone 16 PM height/width, smaller size to be fixed

--- a/src/components/Grid/NCReactGridLayout.css
+++ b/src/components/Grid/NCReactGridLayout.css
@@ -10,3 +10,9 @@
 .react-resizable-handle {
     display: none !important;
 }
+
+.NCReactGridContainer {
+    width: 98% !important;
+    display: flex;
+    justify-content: center;
+}
